@@ -1,5 +1,4 @@
 package com.example.foodflow.service;
-
 import com.example.foodflow.model.dto.ClaimRequest;
 import com.example.foodflow.model.dto.ClaimResponse;
 import com.example.foodflow.model.dto.PickupSlotRequest;
@@ -21,7 +20,6 @@ import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 import org.springframework.messaging.simp.SimpMessagingTemplate;
-
 import java.lang.reflect.Field;
 import java.time.Clock;
 import java.time.Instant;
@@ -32,51 +30,37 @@ import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
-
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.Mockito.*;
-
 @ExtendWith(MockitoExtension.class)
 class ClaimServiceTest {
-
     @Mock
     private ClaimRepository claimRepository;
-
     @Mock
     private SurplusPostRepository surplusPostRepository;
-
     @Mock
     private SimpMessagingTemplate messagingTemplate;
-
     @Mock
     private BusinessMetricsService businessMetricsService;
-
     @Mock
     private NotificationPreferenceService notificationPreferenceService;
-
     @Mock
     private TimelineService timelineService;
-
     @Mock
     private EmailNotificationService emailService;
-
     @Mock
     private GamificationService gamificationService;
-
     @Mock
     private SmsService smsService;
-
     @InjectMocks
     private ClaimService claimService;
-
     private User donor;
     private User receiver;
     private SurplusPost surplusPost;
     private ClaimRequest claimRequest;
-
     @BeforeEach
     void setUp() {
         donor = new User();
@@ -84,13 +68,11 @@ class ClaimServiceTest {
         donor.setEmail("donor@test.com");
         donor.setRole(UserRole.DONOR);
         donor.setAccountStatus(AccountStatus.ACTIVE);
-
         receiver = new User();
         receiver.setId(2L);
         receiver.setEmail("receiver@test.com");
         receiver.setRole(UserRole.RECEIVER);
         receiver.setAccountStatus(AccountStatus.ACTIVE);
-
         surplusPost = new SurplusPost();
         surplusPost.setId(1L);
         surplusPost.setTitle("Test Food");
@@ -100,10 +82,8 @@ class ClaimServiceTest {
         surplusPost.setPickupDate(LocalDate.now().plusDays(1));
         surplusPost.setPickupFrom(LocalTime.of(9, 0));
         surplusPost.setPickupTo(LocalTime.of(17, 0));
-
         claimRequest = new ClaimRequest();
         claimRequest.setSurplusPostId(1L);
-
         // Mock notification preference service to allow all notifications by default
         // Use lenient() because not all tests use this mock
         lenient()
@@ -111,7 +91,6 @@ class ClaimServiceTest {
                         any(String.class)))
                 .thenReturn(true);
     }
-
     private void setFixedClock(Clock clock) {
         try {
             Field clockField = ClaimService.class.getDeclaredField("clock");
@@ -121,39 +100,31 @@ class ClaimServiceTest {
             throw new RuntimeException("Failed to set test clock", e);
         }
     }
-
     @Test
     void claimSurplusPost_Success() {
         // Given
         when(surplusPostRepository.findById(1L)).thenReturn(Optional.of(surplusPost));
         when(claimRepository.existsBySurplusPostIdAndStatus(1L, ClaimStatus.ACTIVE)).thenReturn(false);
-
         Claim savedClaim = new Claim(surplusPost, receiver);
         savedClaim.setId(1L);
         when(claimRepository.save(any(Claim.class))).thenReturn(savedClaim);
         when(surplusPostRepository.save(any(SurplusPost.class))).thenReturn(surplusPost);
-
         // When
         ClaimResponse response = claimService.claimSurplusPost(claimRequest, receiver);
-
         // Then
         assertThat(response).isNotNull();
         assertThat(response.getId()).isEqualTo(1L);
         verify(claimRepository).save(any(Claim.class));
         verify(surplusPostRepository).save(argThat(post -> post.getStatus() == PostStatus.CLAIMED));
     }
-
     @Test
     void claimSurplusPost_UnapprovedReceiver_ThrowsException() {
         receiver.setAccountStatus(AccountStatus.PENDING_ADMIN_APPROVAL);
-
         assertThatThrownBy(() -> claimService.claimSurplusPost(claimRequest, receiver))
                 .isInstanceOf(RuntimeException.class)
                 .hasMessageContaining("error.account.not_approved");
-
         verify(claimRepository, never()).save(any());
     }
-
     @Test
     void claimSurplusPost_DonorLocalExpiryNotYetReached_AllowsClaim() {
         // Given:
@@ -162,78 +133,61 @@ class ClaimServiceTest {
         setFixedClock(Clock.fixed(Instant.parse("2026-03-11T02:00:00Z"), ZoneOffset.UTC));
         donor.setTimezone("America/Los_Angeles");
         surplusPost.setExpiryDate(LocalDate.of(2026, 3, 10));
-
         when(surplusPostRepository.findById(1L)).thenReturn(Optional.of(surplusPost));
         when(claimRepository.existsBySurplusPostIdAndStatus(1L, ClaimStatus.ACTIVE)).thenReturn(false);
-
         Claim savedClaim = new Claim(surplusPost, receiver);
         savedClaim.setId(42L);
         when(claimRepository.save(any(Claim.class))).thenReturn(savedClaim);
         when(surplusPostRepository.save(any(SurplusPost.class))).thenReturn(surplusPost);
-
         // When
         ClaimResponse response = claimService.claimSurplusPost(claimRequest, receiver);
-
         // Then
         assertThat(response).isNotNull();
         assertThat(response.getId()).isEqualTo(42L);
     }
-
     @Test
     void claimSurplusPost_PostNotFound_ThrowsException() {
         // Given
         when(surplusPostRepository.findById(1L)).thenReturn(Optional.empty());
-
         // When & Then
         assertThatThrownBy(() -> claimService.claimSurplusPost(claimRequest, receiver))
                 .isInstanceOf(RuntimeException.class)
                 .hasMessageContaining("error.resource.not_found");
-
         verify(claimRepository, never()).save(any());
     }
-
     @Test
     void claimSurplusPost_PostAlreadyClaimed_ThrowsException() {
         // Given
         surplusPost.setStatus(PostStatus.CLAIMED);
         when(surplusPostRepository.findById(1L)).thenReturn(Optional.of(surplusPost));
-
         // When & Then
         assertThatThrownBy(() -> claimService.claimSurplusPost(claimRequest, receiver))
                 .isInstanceOf(RuntimeException.class)
                 .hasMessageContaining("error.claim.not_available");
-
         verify(claimRepository, never()).save(any());
     }
-
     @Test
     void claimSurplusPost_AlreadyHasActiveClaim_ThrowsException() {
         // Given
         when(surplusPostRepository.findById(1L)).thenReturn(Optional.of(surplusPost));
         when(claimRepository.existsBySurplusPostIdAndStatus(1L, ClaimStatus.ACTIVE)).thenReturn(true);
-
         // When & Then
         assertThatThrownBy(() -> claimService.claimSurplusPost(claimRequest, receiver))
                 .isInstanceOf(RuntimeException.class)
                 .hasMessageContaining("error.claim.already_claimed");
-
         verify(claimRepository, never()).save(any());
     }
-
     @Test
     void claimSurplusPost_DonorClaimingOwnPost_ThrowsException() {
         // Given
         when(surplusPostRepository.findById(1L)).thenReturn(Optional.of(surplusPost));
         when(claimRepository.existsBySurplusPostIdAndStatus(1L, ClaimStatus.ACTIVE)).thenReturn(false);
-
         // When & Then (donor trying to claim their own post)
         assertThatThrownBy(() -> claimService.claimSurplusPost(claimRequest, donor))
                 .isInstanceOf(RuntimeException.class)
                 .hasMessageContaining("error.claim.own_post");
-
         verify(claimRepository, never()).save(any());
     }
-
     @Test
     void getReceiverClaims_ReturnsListOfClaims() {
         // Given
@@ -241,197 +195,155 @@ class ClaimServiceTest {
         claim1.setId(1L);
         Claim claim2 = new Claim(surplusPost, receiver);
         claim2.setId(2L);
-
         when(claimRepository.findReceiverClaimsWithDetails(
-            eq(receiver.getId()),
-            eq(List.of(
-                ClaimStatus.ACTIVE,
-                ClaimStatus.COMPLETED,
-                ClaimStatus.NOT_COMPLETED,
-                ClaimStatus.EXPIRED
-            ))))
-            .thenReturn(Arrays.asList(claim1, claim2));
-
+                eq(receiver.getId()),
+                eq(List.of(
+                        ClaimStatus.ACTIVE,
+                        ClaimStatus.COMPLETED,
+                        ClaimStatus.NOT_COMPLETED,
+                        ClaimStatus.EXPIRED))))
+                .thenReturn(Arrays.asList(claim1, claim2));
         // When
         List<ClaimResponse> responses = claimService.getReceiverClaims(receiver);
-
         // Then
         assertThat(responses).hasSize(2);
         assertThat(responses.get(0).getId()).isEqualTo(1L);
         assertThat(responses.get(1).getId()).isEqualTo(2L);
     }
-
     @Test
     void getReceiverClaims_ConvertsSurplusPickupTimesToReceiverTimezone() {
         receiver.setTimezone("America/Toronto");
         surplusPost.setPickupDate(LocalDate.of(2026, 1, 15));
         surplusPost.setPickupFrom(LocalTime.of(15, 0)); // Stored as UTC
-        surplusPost.setPickupTo(LocalTime.of(17, 0));   // Stored as UTC
-
+        surplusPost.setPickupTo(LocalTime.of(17, 0)); // Stored as UTC
         Claim claim = new Claim(surplusPost, receiver);
         claim.setId(10L);
-
         when(claimRepository.findReceiverClaimsWithDetails(
-            eq(receiver.getId()),
-            eq(List.of(
-                ClaimStatus.ACTIVE,
-                ClaimStatus.COMPLETED,
-                ClaimStatus.NOT_COMPLETED,
-                ClaimStatus.EXPIRED
-            ))))
-            .thenReturn(List.of(claim));
-
+                eq(receiver.getId()),
+                eq(List.of(
+                        ClaimStatus.ACTIVE,
+                        ClaimStatus.COMPLETED,
+                        ClaimStatus.NOT_COMPLETED,
+                        ClaimStatus.EXPIRED))))
+                .thenReturn(List.of(claim));
         List<ClaimResponse> responses = claimService.getReceiverClaims(receiver);
-
         assertThat(responses).hasSize(1);
         assertThat(responses.get(0).getSurplusPost().getPickupDate())
-            .isEqualTo(LocalDate.of(2026, 1, 15));
+                .isEqualTo(LocalDate.of(2026, 1, 15));
         assertThat(responses.get(0).getSurplusPost().getPickupFrom())
-            .isEqualTo(LocalTime.of(10, 0));
+                .isEqualTo(LocalTime.of(10, 0));
         assertThat(responses.get(0).getSurplusPost().getPickupTo())
-            .isEqualTo(LocalTime.of(12, 0));
+                .isEqualTo(LocalTime.of(12, 0));
     }
-
     @Test
     void getReceiverClaims_ConvertsConfirmedPickupSlotToReceiverTimezone() {
         receiver.setTimezone("America/Toronto");
-
         Claim claim = new Claim(surplusPost, receiver);
         claim.setId(11L);
         claim.setConfirmedPickupDate(LocalDate.of(2026, 1, 15));
         claim.setConfirmedPickupStartTime(LocalTime.of(22, 45)); // UTC
-        claim.setConfirmedPickupEndTime(LocalTime.of(23, 45));   // UTC
-
+        claim.setConfirmedPickupEndTime(LocalTime.of(23, 45)); // UTC
         when(claimRepository.findReceiverClaimsWithDetails(
-            eq(receiver.getId()),
-            eq(List.of(
-                ClaimStatus.ACTIVE,
-                ClaimStatus.COMPLETED,
-                ClaimStatus.NOT_COMPLETED,
-                ClaimStatus.EXPIRED
-            ))))
-            .thenReturn(List.of(claim));
-
+                eq(receiver.getId()),
+                eq(List.of(
+                        ClaimStatus.ACTIVE,
+                        ClaimStatus.COMPLETED,
+                        ClaimStatus.NOT_COMPLETED,
+                        ClaimStatus.EXPIRED))))
+                .thenReturn(List.of(claim));
         List<ClaimResponse> responses = claimService.getReceiverClaims(receiver);
-
         assertThat(responses).hasSize(1);
         assertThat(responses.get(0).getConfirmedPickupSlot()).isNotNull();
         assertThat(responses.get(0).getConfirmedPickupSlot().getPickupDate())
-            .isEqualTo(LocalDate.of(2026, 1, 15));
+                .isEqualTo(LocalDate.of(2026, 1, 15));
         assertThat(responses.get(0).getConfirmedPickupSlot().getStartTime())
-            .isEqualTo(LocalTime.of(17, 45));
+                .isEqualTo(LocalTime.of(17, 45));
         assertThat(responses.get(0).getConfirmedPickupSlot().getEndTime())
-            .isEqualTo(LocalTime.of(18, 45));
+                .isEqualTo(LocalTime.of(18, 45));
     }
-
     @Test
     void getReceiverClaims_NoClaims_ReturnsEmptyList() {
         // Given
         when(claimRepository.findReceiverClaimsWithDetails(
-            eq(receiver.getId()),
-            eq(List.of(
-                ClaimStatus.ACTIVE,
-                ClaimStatus.COMPLETED,
-                ClaimStatus.NOT_COMPLETED,
-                ClaimStatus.EXPIRED
-            ))))
-            .thenReturn(Arrays.asList());
-
+                eq(receiver.getId()),
+                eq(List.of(
+                        ClaimStatus.ACTIVE,
+                        ClaimStatus.COMPLETED,
+                        ClaimStatus.NOT_COMPLETED,
+                        ClaimStatus.EXPIRED))))
+                .thenReturn(Arrays.asList());
         // When
         List<ClaimResponse> responses = claimService.getReceiverClaims(receiver);
-
         // Then
         assertThat(responses).isEmpty();
     }
-
     @Test
     void getClaimsForSurplusPost_ReturnsClaims() {
         // Given
         Claim claim = new Claim(surplusPost, receiver);
         claim.setId(1L);
-
         when(claimRepository.findBySurplusPostId(1L))
                 .thenReturn(Arrays.asList(claim));
-
         // When
         List<ClaimResponse> responses = claimService.getClaimsForSurplusPost(1L);
-
         // Then
         assertThat(responses).hasSize(1);
         assertThat(responses.get(0).getId()).isEqualTo(1L);
     }
-
     @Test
     void cancelClaim_Success() {
         // Given
         Claim claim = new Claim(surplusPost, receiver);
         claim.setId(1L);
-
         when(claimRepository.findById(1L)).thenReturn(Optional.of(claim));
         when(claimRepository.save(any(Claim.class))).thenReturn(claim);
         when(surplusPostRepository.save(any(SurplusPost.class))).thenReturn(surplusPost);
-
         // When
         claimService.cancelClaim(1L, receiver);
-
         // Then
         verify(claimRepository).save(argThat(c -> c.getStatus() == ClaimStatus.CANCELLED));
         verify(surplusPostRepository).save(argThat(post -> post.getStatus() == PostStatus.AVAILABLE));
     }
-
     @Test
     void cancelClaim_ClaimNotFound_ThrowsException() {
         // Given
         when(claimRepository.findById(1L)).thenReturn(Optional.empty());
-
         // When & Then
         assertThatThrownBy(() -> claimService.cancelClaim(1L, receiver))
                 .isInstanceOf(RuntimeException.class)
                 .hasMessageContaining("error.resource.not_found");
-
         verify(surplusPostRepository, never()).save(any());
     }
-
     @Test
     void cancelClaim_NotClaimOwner_ThrowsException() {
         // Given
         Claim claim = new Claim(surplusPost, receiver);
         claim.setId(1L);
-
         User otherReceiver = new User();
         otherReceiver.setId(3L);
         otherReceiver.setEmail("other@test.com");
-
         when(claimRepository.findById(1L)).thenReturn(Optional.of(claim));
-
         // When & Then
         assertThatThrownBy(() -> claimService.cancelClaim(1L, otherReceiver))
                 .isInstanceOf(RuntimeException.class)
                 .hasMessageContaining("error.claim.unauthorized_cancel");
-
         verify(claimRepository, never()).save(any());
         verify(surplusPostRepository, never()).save(any());
     }
-
     // ========== PICKUP SLOT TESTS ==========
-
     @Test
     void claimSurplusPost_WithInlinePickupSlot_StoresConfirmedPickupTime() {
         // Given
         LocalDate pickupDate = LocalDate.now().plusDays(2);
         LocalTime startTime = LocalTime.of(10, 0);
         LocalTime endTime = LocalTime.of(12, 0);
-
         PickupSlotRequest pickupSlot = new PickupSlotRequest();
         pickupSlot.setPickupDate(pickupDate);
         pickupSlot.setStartTime(startTime);
         pickupSlot.setEndTime(endTime);
-
         claimRequest.setPickupSlot(pickupSlot);
-
         when(surplusPostRepository.findById(1L)).thenReturn(Optional.of(surplusPost));
         when(claimRepository.existsBySurplusPostIdAndStatus(1L, ClaimStatus.ACTIVE)).thenReturn(false);
-
         ArgumentCaptor<Claim> claimCaptor = ArgumentCaptor.forClass(Claim.class);
         Claim savedClaim = new Claim(surplusPost, receiver);
         savedClaim.setId(1L);
@@ -440,10 +352,8 @@ class ClaimServiceTest {
         savedClaim.setConfirmedPickupEndTime(endTime);
         when(claimRepository.save(claimCaptor.capture())).thenReturn(savedClaim);
         when(surplusPostRepository.save(any(SurplusPost.class))).thenReturn(surplusPost);
-
         // When
         ClaimResponse response = claimService.claimSurplusPost(claimRequest, receiver);
-
         // Then
         assertThat(response).isNotNull();
         Claim capturedClaim = claimCaptor.getValue();
@@ -451,30 +361,24 @@ class ClaimServiceTest {
         assertThat(capturedClaim.getConfirmedPickupStartTime()).isEqualTo(startTime);
         assertThat(capturedClaim.getConfirmedPickupEndTime()).isEqualTo(endTime);
     }
-
     @Test
     void claimSurplusPost_WithPickupSlotId_StoresConfirmedPickupTime() {
         // Given
         LocalDate pickupDate = LocalDate.now().plusDays(2);
         LocalTime startTime = LocalTime.of(14, 0);
         LocalTime endTime = LocalTime.of(16, 0);
-
         PickupSlot existingSlot = new PickupSlot();
         existingSlot.setId(100L);
         existingSlot.setPickupDate(pickupDate);
         existingSlot.setStartTime(startTime);
         existingSlot.setEndTime(endTime);
         existingSlot.setSurplusPost(surplusPost);
-
         List<PickupSlot> pickupSlots = new ArrayList<>();
         pickupSlots.add(existingSlot);
         surplusPost.setPickupSlots(pickupSlots);
-
         claimRequest.setPickupSlotId(100L);
-
         when(surplusPostRepository.findById(1L)).thenReturn(Optional.of(surplusPost));
         when(claimRepository.existsBySurplusPostIdAndStatus(1L, ClaimStatus.ACTIVE)).thenReturn(false);
-
         ArgumentCaptor<Claim> claimCaptor = ArgumentCaptor.forClass(Claim.class);
         Claim savedClaim = new Claim(surplusPost, receiver);
         savedClaim.setId(1L);
@@ -483,10 +387,8 @@ class ClaimServiceTest {
         savedClaim.setConfirmedPickupEndTime(endTime);
         when(claimRepository.save(claimCaptor.capture())).thenReturn(savedClaim);
         when(surplusPostRepository.save(any(SurplusPost.class))).thenReturn(surplusPost);
-
         // When
         ClaimResponse response = claimService.claimSurplusPost(claimRequest, receiver);
-
         // Then
         assertThat(response).isNotNull();
         Claim capturedClaim = claimCaptor.getValue();
@@ -494,7 +396,6 @@ class ClaimServiceTest {
         assertThat(capturedClaim.getConfirmedPickupStartTime()).isEqualTo(startTime);
         assertThat(capturedClaim.getConfirmedPickupEndTime()).isEqualTo(endTime);
     }
-
     @Test
     void claimSurplusPost_WithInvalidPickupSlotId_DoesNotSetConfirmedTime() {
         // Given
@@ -503,17 +404,13 @@ class ClaimServiceTest {
         existingSlot.setPickupDate(LocalDate.now().plusDays(2));
         existingSlot.setStartTime(LocalTime.of(14, 0));
         existingSlot.setEndTime(LocalTime.of(16, 0));
-
         List<PickupSlot> pickupSlots = new ArrayList<>();
         pickupSlots.add(existingSlot);
         surplusPost.setPickupSlots(pickupSlots);
-
         // Request a non-existent slot ID
         claimRequest.setPickupSlotId(999L);
-
         when(surplusPostRepository.findById(1L)).thenReturn(Optional.of(surplusPost));
         when(claimRepository.existsBySurplusPostIdAndStatus(1L, ClaimStatus.ACTIVE)).thenReturn(false);
-
         ArgumentCaptor<Claim> claimCaptor = ArgumentCaptor.forClass(Claim.class);
         Claim savedClaim = new Claim(surplusPost, receiver);
         savedClaim.setId(1L);
@@ -523,10 +420,8 @@ class ClaimServiceTest {
         savedClaim.setConfirmedPickupEndTime(surplusPost.getPickupTo());
         when(claimRepository.save(claimCaptor.capture())).thenReturn(savedClaim);
         when(surplusPostRepository.save(any(SurplusPost.class))).thenReturn(surplusPost);
-
         // When
         ClaimResponse response = claimService.claimSurplusPost(claimRequest, receiver);
-
         // Then - should fallback to post's default times
         assertThat(response).isNotNull();
         Claim capturedClaim = claimCaptor.getValue();
@@ -534,13 +429,11 @@ class ClaimServiceTest {
         assertThat(capturedClaim.getConfirmedPickupStartTime()).isEqualTo(surplusPost.getPickupFrom());
         assertThat(capturedClaim.getConfirmedPickupEndTime()).isEqualTo(surplusPost.getPickupTo());
     }
-
     @Test
     void claimSurplusPost_WithoutPickupSlot_UsesFallbackTimes() {
         // Given - no pickup slot provided in request
         when(surplusPostRepository.findById(1L)).thenReturn(Optional.of(surplusPost));
         when(claimRepository.existsBySurplusPostIdAndStatus(1L, ClaimStatus.ACTIVE)).thenReturn(false);
-
         ArgumentCaptor<Claim> claimCaptor = ArgumentCaptor.forClass(Claim.class);
         Claim savedClaim = new Claim(surplusPost, receiver);
         savedClaim.setId(1L);
@@ -549,10 +442,8 @@ class ClaimServiceTest {
         savedClaim.setConfirmedPickupEndTime(surplusPost.getPickupTo());
         when(claimRepository.save(claimCaptor.capture())).thenReturn(savedClaim);
         when(surplusPostRepository.save(any(SurplusPost.class))).thenReturn(surplusPost);
-
         // When
         ClaimResponse response = claimService.claimSurplusPost(claimRequest, receiver);
-
         // Then - should use post's default pickup times
         assertThat(response).isNotNull();
         Claim capturedClaim = claimCaptor.getValue();
@@ -560,7 +451,6 @@ class ClaimServiceTest {
         assertThat(capturedClaim.getConfirmedPickupStartTime()).isEqualTo(surplusPost.getPickupFrom());
         assertThat(capturedClaim.getConfirmedPickupEndTime()).isEqualTo(surplusPost.getPickupTo());
     }
-
     @Test
     void claimSurplusPost_WithPickupSlot_SetsStatusToClaimedWhenFuture() {
         // Given - pickup date is in the future
@@ -569,43 +459,33 @@ class ClaimServiceTest {
         pickupSlot.setPickupDate(futureDate);
         pickupSlot.setStartTime(LocalTime.of(10, 0));
         pickupSlot.setEndTime(LocalTime.of(12, 0));
-
         claimRequest.setPickupSlot(pickupSlot);
         surplusPost.setPickupDate(futureDate);
-
         when(surplusPostRepository.findById(1L)).thenReturn(Optional.of(surplusPost));
         when(claimRepository.existsBySurplusPostIdAndStatus(1L, ClaimStatus.ACTIVE)).thenReturn(false);
-
         Claim savedClaim = new Claim(surplusPost, receiver);
         savedClaim.setId(1L);
         when(claimRepository.save(any(Claim.class))).thenReturn(savedClaim);
         when(surplusPostRepository.save(any(SurplusPost.class))).thenReturn(surplusPost);
-
         // When
         claimService.claimSurplusPost(claimRequest, receiver);
-
         // Then - status should be CLAIMED (not READY_FOR_PICKUP)
         verify(surplusPostRepository).save(argThat(post -> post.getStatus() == PostStatus.CLAIMED));
     }
-
     @Test
     void claimSurplusPost_WithPickupSlotInPast_SetsStatusToReadyForPickup() {
         // Given - pickup date is in the past
         LocalDate pastDate = LocalDate.now().minusDays(1);
         LocalTime startTime = LocalTime.of(10, 0);
         LocalTime endTime = LocalTime.of(12, 0);
-
         PickupSlotRequest pickupSlot = new PickupSlotRequest();
         pickupSlot.setPickupDate(pastDate);
         pickupSlot.setStartTime(startTime);
         pickupSlot.setEndTime(endTime);
-
         claimRequest.setPickupSlot(pickupSlot);
         surplusPost.setPickupDate(pastDate);
-
         when(surplusPostRepository.findById(1L)).thenReturn(Optional.of(surplusPost));
         when(claimRepository.existsBySurplusPostIdAndStatus(1L, ClaimStatus.ACTIVE)).thenReturn(false);
-
         // Mock needs to return a claim with confirmed pickup dates set!
         Claim savedClaim = new Claim(surplusPost, receiver);
         savedClaim.setId(1L);
@@ -614,401 +494,298 @@ class ClaimServiceTest {
         savedClaim.setConfirmedPickupEndTime(endTime);
         when(claimRepository.save(any(Claim.class))).thenReturn(savedClaim);
         when(surplusPostRepository.save(any(SurplusPost.class))).thenReturn(surplusPost);
-
         // When
         claimService.claimSurplusPost(claimRequest, receiver);
-
         // Then - status should be READY_FOR_PICKUP and OTP code generated
         verify(surplusPostRepository).save(argThat(post -> post.getStatus() == PostStatus.READY_FOR_PICKUP &&
                 post.getOtpCode() != null &&
                 !post.getOtpCode().isEmpty()));
     }
-
     @Test
     void claimSurplusPost_WithPickupSlotToday_ChecksCurrentTime() {
         // Given - pickup is tomorrow (future date means it stays CLAIMED)
         LocalDate tomorrow = LocalDate.now().plusDays(1);
         LocalTime pickupStart = LocalTime.of(10, 0);
         LocalTime pickupEnd = LocalTime.of(12, 0);
-
         PickupSlotRequest pickupSlot = new PickupSlotRequest();
         pickupSlot.setPickupDate(tomorrow);
         pickupSlot.setStartTime(pickupStart);
         pickupSlot.setEndTime(pickupEnd);
-
         claimRequest.setPickupSlot(pickupSlot);
         surplusPost.setPickupDate(tomorrow);
         surplusPost.setPickupFrom(pickupStart);
-
         when(surplusPostRepository.findById(1L)).thenReturn(Optional.of(surplusPost));
         when(claimRepository.existsBySurplusPostIdAndStatus(1L, ClaimStatus.ACTIVE)).thenReturn(false);
-
         Claim savedClaim = new Claim(surplusPost, receiver);
         savedClaim.setId(1L);
         when(claimRepository.save(any(Claim.class))).thenReturn(savedClaim);
-
         ArgumentCaptor<SurplusPost> postCaptor = ArgumentCaptor.forClass(SurplusPost.class);
         when(surplusPostRepository.save(postCaptor.capture())).thenReturn(surplusPost);
-
         // When
         claimService.claimSurplusPost(claimRequest, receiver);
-
         // Then - status should be CLAIMED since pickup date is in the future
         SurplusPost savedPost = postCaptor.getValue();
         assertThat(savedPost.getStatus()).isEqualTo(PostStatus.CLAIMED);
     }
-
     // Notification Tests
-
     @Test
     void claimSurplusPost_WithEmailNotificationsEnabled_SendsEmailToDonor() {
         when(surplusPostRepository.findById(1L)).thenReturn(Optional.of(surplusPost));
         when(claimRepository.existsBySurplusPostIdAndStatus(1L, ClaimStatus.ACTIVE)).thenReturn(false);
-
         Claim savedClaim = new Claim(surplusPost, receiver);
         savedClaim.setId(1L);
         when(claimRepository.save(any(Claim.class))).thenReturn(savedClaim);
         when(surplusPostRepository.save(any(SurplusPost.class))).thenReturn(surplusPost);
-
         when(notificationPreferenceService.shouldSendNotification(eq(donor), eq("donationClaimed"), eq("email")))
                 .thenReturn(true);
         when(notificationPreferenceService.shouldSendNotification(eq(donor), eq("donationClaimed"), eq("websocket")))
                 .thenReturn(true);
-
         claimService.claimSurplusPost(claimRequest, receiver);
-
         verify(notificationPreferenceService).shouldSendNotification(eq(donor), eq("donationClaimed"), eq("email"));
         verify(notificationPreferenceService).shouldSendNotification(eq(donor), eq("donationClaimed"), eq("websocket"));
     }
-
     @Test
     void claimSurplusPost_WithEmailNotificationsDisabled_DoesNotSendEmail() {
         when(surplusPostRepository.findById(1L)).thenReturn(Optional.of(surplusPost));
         when(claimRepository.existsBySurplusPostIdAndStatus(1L, ClaimStatus.ACTIVE)).thenReturn(false);
-
         Claim savedClaim = new Claim(surplusPost, receiver);
         savedClaim.setId(1L);
         when(claimRepository.save(any(Claim.class))).thenReturn(savedClaim);
         when(surplusPostRepository.save(any(SurplusPost.class))).thenReturn(surplusPost);
-
         when(notificationPreferenceService.shouldSendNotification(eq(donor), eq("donationClaimed"), eq("email")))
                 .thenReturn(false);
         when(notificationPreferenceService.shouldSendNotification(eq(donor), eq("donationClaimed"), eq("websocket")))
                 .thenReturn(true);
-
         claimService.claimSurplusPost(claimRequest, receiver);
-
         verify(notificationPreferenceService).shouldSendNotification(eq(donor), eq("donationClaimed"), eq("email"));
         verify(messagingTemplate).convertAndSendToUser(eq("1"), eq("/queue/claims"), any());
         verify(messagingTemplate).convertAndSendToUser(eq("2"), eq("/queue/claims"), any());
     }
-
     @Test
     void claimSurplusPost_WithWebSocketNotificationsDisabled_DoesNotSendWebSocket() {
         when(surplusPostRepository.findById(1L)).thenReturn(Optional.of(surplusPost));
         when(claimRepository.existsBySurplusPostIdAndStatus(1L, ClaimStatus.ACTIVE)).thenReturn(false);
-
         Claim savedClaim = new Claim(surplusPost, receiver);
         savedClaim.setId(1L);
         when(claimRepository.save(any(Claim.class))).thenReturn(savedClaim);
         when(surplusPostRepository.save(any(SurplusPost.class))).thenReturn(surplusPost);
-
         when(notificationPreferenceService.shouldSendNotification(eq(donor), eq("donationClaimed"), eq("websocket")))
                 .thenReturn(false);
         when(notificationPreferenceService.shouldSendNotification(eq(donor), eq("donationClaimed"), eq("email")))
                 .thenReturn(true);
-
         claimService.claimSurplusPost(claimRequest, receiver);
-
         verify(notificationPreferenceService).shouldSendNotification(eq(donor), eq("donationClaimed"), eq("websocket"));
         // Should still send to receiver (notification always sent to claim creator)
         verify(messagingTemplate).convertAndSendToUser(eq("2"), eq("/queue/claims"), any());
     }
-
     @Test
     void claimSurplusPost_WithAllNotificationsDisabled_DoesNotSendToDonor() {
         when(surplusPostRepository.findById(1L)).thenReturn(Optional.of(surplusPost));
         when(claimRepository.existsBySurplusPostIdAndStatus(1L, ClaimStatus.ACTIVE)).thenReturn(false);
-
         Claim savedClaim = new Claim(surplusPost, receiver);
         savedClaim.setId(1L);
         when(claimRepository.save(any(Claim.class))).thenReturn(savedClaim);
         when(surplusPostRepository.save(any(SurplusPost.class))).thenReturn(surplusPost);
-
         when(notificationPreferenceService.shouldSendNotification(eq(donor), eq("donationClaimed"), anyString()))
                 .thenReturn(false);
-
         claimService.claimSurplusPost(claimRequest, receiver);
-
-        verify(notificationPreferenceService, times(3)).shouldSendNotification(eq(donor), eq("donationClaimed"), anyString());
+        verify(notificationPreferenceService, times(3)).shouldSendNotification(eq(donor), eq("donationClaimed"),
+                anyString());
         // Should still send to receiver
         verify(messagingTemplate).convertAndSendToUser(eq("2"), eq("/queue/claims"), any());
     }
-
     @Test
     void cancelClaim_WithEmailNotificationsEnabled_SendsEmailToDonor() {
         Claim activeClaim = new Claim(surplusPost, receiver);
         activeClaim.setId(1L);
         activeClaim.setStatus(ClaimStatus.ACTIVE);
-
         when(claimRepository.findById(1L)).thenReturn(Optional.of(activeClaim));
         when(claimRepository.save(any(Claim.class))).thenReturn(activeClaim);
         when(surplusPostRepository.save(any(SurplusPost.class))).thenReturn(surplusPost);
-
         when(notificationPreferenceService.shouldSendNotification(eq(donor), eq("claimCanceled"), eq("email")))
                 .thenReturn(true);
         when(notificationPreferenceService.shouldSendNotification(eq(donor), eq("claimCanceled"), eq("websocket")))
                 .thenReturn(true);
-
         claimService.cancelClaim(1L, receiver);
-
         verify(notificationPreferenceService).shouldSendNotification(eq(donor), eq("claimCanceled"), eq("email"));
         verify(notificationPreferenceService).shouldSendNotification(eq(donor), eq("claimCanceled"), eq("websocket"));
     }
-
     @Test
     void cancelClaim_WithEmailNotificationsDisabled_DoesNotSendEmail() {
         Claim activeClaim = new Claim(surplusPost, receiver);
         activeClaim.setId(1L);
         activeClaim.setStatus(ClaimStatus.ACTIVE);
-
         when(claimRepository.findById(1L)).thenReturn(Optional.of(activeClaim));
         when(claimRepository.save(any(Claim.class))).thenReturn(activeClaim);
         when(surplusPostRepository.save(any(SurplusPost.class))).thenReturn(surplusPost);
-
         when(notificationPreferenceService.shouldSendNotification(eq(donor), eq("claimCanceled"), eq("email")))
                 .thenReturn(false);
         when(notificationPreferenceService.shouldSendNotification(eq(donor), eq("claimCanceled"), eq("websocket")))
                 .thenReturn(true);
-
         claimService.cancelClaim(1L, receiver);
-
         verify(notificationPreferenceService).shouldSendNotification(eq(donor), eq("claimCanceled"), eq("email"));
         verify(messagingTemplate).convertAndSendToUser(eq("1"), eq("/queue/claims/cancelled"), any());
     }
-
     @Test
     void cancelClaim_WithWebSocketNotificationsDisabled_DoesNotSendWebSocket() {
         Claim activeClaim = new Claim(surplusPost, receiver);
         activeClaim.setId(1L);
         activeClaim.setStatus(ClaimStatus.ACTIVE);
-
         when(claimRepository.findById(1L)).thenReturn(Optional.of(activeClaim));
         when(claimRepository.save(any(Claim.class))).thenReturn(activeClaim);
         when(surplusPostRepository.save(any(SurplusPost.class))).thenReturn(surplusPost);
-
         when(notificationPreferenceService.shouldSendNotification(eq(donor), eq("claimCanceled"), eq("websocket")))
                 .thenReturn(false);
         when(notificationPreferenceService.shouldSendNotification(eq(donor), eq("claimCanceled"), eq("email")))
                 .thenReturn(true);
-
         claimService.cancelClaim(1L, receiver);
-
         verify(notificationPreferenceService).shouldSendNotification(eq(donor), eq("claimCanceled"), eq("websocket"));
         verify(messagingTemplate, never()).convertAndSendToUser(anyString(), eq("/queue/claims/cancelled"), any());
     }
-
     @Test
     void cancelClaim_WithAllNotificationsDisabled_DoesNotSendToDonor() {
         Claim activeClaim = new Claim(surplusPost, receiver);
         activeClaim.setId(1L);
         activeClaim.setStatus(ClaimStatus.ACTIVE);
-
         when(claimRepository.findById(1L)).thenReturn(Optional.of(activeClaim));
         when(claimRepository.save(any(Claim.class))).thenReturn(activeClaim);
         when(surplusPostRepository.save(any(SurplusPost.class))).thenReturn(surplusPost);
-
         when(notificationPreferenceService.shouldSendNotification(eq(donor), eq("claimCanceled"), anyString()))
                 .thenReturn(false);
-
         claimService.cancelClaim(1L, receiver);
-
-        verify(notificationPreferenceService, times(3)).shouldSendNotification(eq(donor), eq("claimCanceled"), anyString());
+        verify(notificationPreferenceService, times(3)).shouldSendNotification(eq(donor), eq("claimCanceled"),
+                anyString());
         verify(messagingTemplate, never()).convertAndSendToUser(anyString(), eq("/queue/claims/cancelled"), any());
     }
-
     @Test
     void claimSurplusPost_VerifiesCorrectNotificationChannelsChecked() {
         when(surplusPostRepository.findById(1L)).thenReturn(Optional.of(surplusPost));
         when(claimRepository.existsBySurplusPostIdAndStatus(1L, ClaimStatus.ACTIVE)).thenReturn(false);
-
         Claim savedClaim = new Claim(surplusPost, receiver);
         savedClaim.setId(1L);
         when(claimRepository.save(any(Claim.class))).thenReturn(savedClaim);
         when(surplusPostRepository.save(any(SurplusPost.class))).thenReturn(surplusPost);
-
         when(notificationPreferenceService.shouldSendNotification(any(User.class), anyString(), anyString()))
                 .thenReturn(true);
-
         claimService.claimSurplusPost(claimRequest, receiver);
-
         // Verify both websocket and email channels are checked for donor
         verify(notificationPreferenceService).shouldSendNotification(donor, "donationClaimed", "websocket");
         verify(notificationPreferenceService).shouldSendNotification(donor, "donationClaimed", "email");
     }
-
     @Test
     void claimSurplusPost_SendsSmsWhenEnabledAndPhoneValid() {
         donor.setPhone("+12345678901");
-        
         when(surplusPostRepository.findById(1L)).thenReturn(Optional.of(surplusPost));
         when(claimRepository.existsBySurplusPostIdAndStatus(1L, ClaimStatus.ACTIVE)).thenReturn(false);
-
         Claim savedClaim = new Claim(surplusPost, receiver);
         savedClaim.setId(1L);
         when(claimRepository.save(any(Claim.class))).thenReturn(savedClaim);
         when(surplusPostRepository.save(any(SurplusPost.class))).thenReturn(surplusPost);
-
         when(notificationPreferenceService.shouldSendNotification(eq(donor), eq("donationClaimed"), eq("sms")))
                 .thenReturn(true);
-
         claimService.claimSurplusPost(claimRequest, receiver);
-
         verify(smsService).sendDonationClaimedNotification(anyString(), anyString(), any());
     }
-
     @Test
     void claimSurplusPost_DoesNotSendSmsWhenPhoneInvalid() {
         donor.setPhone("invalid-phone");
-        
         when(surplusPostRepository.findById(1L)).thenReturn(Optional.of(surplusPost));
         when(claimRepository.existsBySurplusPostIdAndStatus(1L, ClaimStatus.ACTIVE)).thenReturn(false);
-
         Claim savedClaim = new Claim(surplusPost, receiver);
         savedClaim.setId(1L);
         when(claimRepository.save(any(Claim.class))).thenReturn(savedClaim);
         when(surplusPostRepository.save(any(SurplusPost.class))).thenReturn(surplusPost);
-
         when(notificationPreferenceService.shouldSendNotification(eq(donor), eq("donationClaimed"), eq("sms")))
                 .thenReturn(true);
-
         claimService.claimSurplusPost(claimRequest, receiver);
-
         verify(smsService, never()).sendDonationClaimedNotification(anyString(), anyString(), any());
     }
-
     @Test
     void cancelClaim_SendsSmsWhenEnabledAndPhoneValid() {
         donor.setPhone("+19876543210");
-        
         Claim activeClaim = new Claim(surplusPost, receiver);
         activeClaim.setId(1L);
         activeClaim.setStatus(ClaimStatus.ACTIVE);
-
         when(claimRepository.findById(1L)).thenReturn(Optional.of(activeClaim));
         when(claimRepository.save(any(Claim.class))).thenReturn(activeClaim);
         when(surplusPostRepository.save(any(SurplusPost.class))).thenReturn(surplusPost);
-
         when(notificationPreferenceService.shouldSendNotification(eq(donor), eq("claimCanceled"), eq("sms")))
                 .thenReturn(true);
-
         claimService.cancelClaim(1L, receiver);
-
         verify(smsService).sendClaimCanceledNotification(anyString(), anyString(), any());
     }
-
     @Test
     void cancelClaim_DoesNotSendSmsWhenPhoneMissing() {
         donor.setPhone(null);
-        
         Claim activeClaim = new Claim(surplusPost, receiver);
         activeClaim.setId(1L);
         activeClaim.setStatus(ClaimStatus.ACTIVE);
-
         when(claimRepository.findById(1L)).thenReturn(Optional.of(activeClaim));
         when(claimRepository.save(any(Claim.class))).thenReturn(activeClaim);
         when(surplusPostRepository.save(any(SurplusPost.class))).thenReturn(surplusPost);
-
         when(notificationPreferenceService.shouldSendNotification(eq(donor), eq("claimCanceled"), eq("sms")))
                 .thenReturn(true);
-
         claimService.cancelClaim(1L, receiver);
-
         verify(smsService, never()).sendClaimCanceledNotification(anyString(), anyString(), any());
     }
-
     @Test
     void claimSurplusPost_SendsEmailWithDonorNameWhenNoOrganization() {
         // Ensure donor has no organization
         donor.setOrganization(null);
-        
         when(surplusPostRepository.findById(1L)).thenReturn(Optional.of(surplusPost));
         when(claimRepository.existsBySurplusPostIdAndStatus(1L, ClaimStatus.ACTIVE)).thenReturn(false);
-
         Claim savedClaim = new Claim(surplusPost, receiver);
         savedClaim.setId(1L);
         when(claimRepository.save(any(Claim.class))).thenReturn(savedClaim);
         when(surplusPostRepository.save(any(SurplusPost.class))).thenReturn(surplusPost);
-
         when(notificationPreferenceService.shouldSendNotification(eq(donor), eq("donationClaimed"), eq("email")))
                 .thenReturn(true);
-
         claimService.claimSurplusPost(claimRequest, receiver);
-
         verify(emailService).sendDonationClaimedNotification(eq("donor@test.com"), eq("Donor"), any());
     }
-
     @Test
     void cancelClaim_SendsEmailWithDonorNameWhenNoOrganization() {
         // Ensure donor has no organization
         donor.setOrganization(null);
-        
         Claim activeClaim = new Claim(surplusPost, receiver);
         activeClaim.setId(1L);
         activeClaim.setStatus(ClaimStatus.ACTIVE);
-
         when(claimRepository.findById(1L)).thenReturn(Optional.of(activeClaim));
         when(claimRepository.save(any(Claim.class))).thenReturn(activeClaim);
         when(surplusPostRepository.save(any(SurplusPost.class))).thenReturn(surplusPost);
-
         when(notificationPreferenceService.shouldSendNotification(eq(donor), eq("claimCanceled"), eq("email")))
                 .thenReturn(true);
-
         claimService.cancelClaim(1L, receiver);
-
         verify(emailService).sendClaimCanceledNotification(eq("donor@test.com"), eq("Donor"), any());
     }
-
     @Test
     void claimSurplusPost_DoesNotSendSmsWhenPhoneEmpty() {
-        donor.setPhone("   ");  // Empty/whitespace phone
-        
+        donor.setPhone("   "); // Empty/whitespace phone
         when(surplusPostRepository.findById(1L)).thenReturn(Optional.of(surplusPost));
         when(claimRepository.existsBySurplusPostIdAndStatus(1L, ClaimStatus.ACTIVE)).thenReturn(false);
-
         Claim savedClaim = new Claim(surplusPost, receiver);
         savedClaim.setId(1L);
         when(claimRepository.save(any(Claim.class))).thenReturn(savedClaim);
         when(surplusPostRepository.save(any(SurplusPost.class))).thenReturn(surplusPost);
-
         when(notificationPreferenceService.shouldSendNotification(eq(donor), eq("donationClaimed"), eq("sms")))
                 .thenReturn(true);
-
         claimService.claimSurplusPost(claimRequest, receiver);
-
         verify(smsService, never()).sendDonationClaimedNotification(anyString(), anyString(), any());
     }
-
     @Test
     void cancelClaim_DoesNotSendSmsWhenPhoneEmpty() {
-        donor.setPhone("");  // Empty string phone
-        
+        donor.setPhone(""); // Empty string phone
         Claim activeClaim = new Claim(surplusPost, receiver);
         activeClaim.setId(1L);
         activeClaim.setStatus(ClaimStatus.ACTIVE);
-
         when(claimRepository.findById(1L)).thenReturn(Optional.of(activeClaim));
         when(claimRepository.save(any(Claim.class))).thenReturn(activeClaim);
         when(surplusPostRepository.save(any(SurplusPost.class))).thenReturn(surplusPost);
-
         when(notificationPreferenceService.shouldSendNotification(eq(donor), eq("claimCanceled"), eq("sms")))
                 .thenReturn(true);
-
         claimService.cancelClaim(1L, receiver);
-
         verify(smsService, never()).sendClaimCanceledNotification(anyString(), anyString(), any());
     }
-
     @Test
     void claimSurplusPost_UsesReceiverOrganizationNameInTimeline() {
         // Set up receiver with organization
@@ -1016,17 +793,13 @@ class ClaimServiceTest {
         receiverOrg.setId(10L);
         receiverOrg.setName("Test Food Bank");
         receiver.setOrganization(receiverOrg);
-
         when(surplusPostRepository.findById(1L)).thenReturn(Optional.of(surplusPost));
         when(claimRepository.existsBySurplusPostIdAndStatus(1L, ClaimStatus.ACTIVE)).thenReturn(false);
-
         Claim savedClaim = new Claim(surplusPost, receiver);
         savedClaim.setId(1L);
         when(claimRepository.save(any(Claim.class))).thenReturn(savedClaim);
         when(surplusPostRepository.save(any(SurplusPost.class))).thenReturn(surplusPost);
-
         claimService.claimSurplusPost(claimRequest, receiver);
-
         // Verify timeline event was created with organization name
         verify(timelineService).createTimelineEvent(
                 eq(surplusPost),
@@ -1036,25 +809,19 @@ class ClaimServiceTest {
                 eq(PostStatus.AVAILABLE),
                 any(PostStatus.class),
                 eq("Claimed by Test Food Bank"),
-                eq(true)
-        );
+                eq(true));
     }
-
     @Test
     void claimSurplusPost_UsesReceiverEmailInTimelineWhenNoOrganization() {
         // Ensure receiver has no organization (default in setUp)
         receiver.setOrganization(null);
-
         when(surplusPostRepository.findById(1L)).thenReturn(Optional.of(surplusPost));
         when(claimRepository.existsBySurplusPostIdAndStatus(1L, ClaimStatus.ACTIVE)).thenReturn(false);
-
         Claim savedClaim = new Claim(surplusPost, receiver);
         savedClaim.setId(1L);
         when(claimRepository.save(any(Claim.class))).thenReturn(savedClaim);
         when(surplusPostRepository.save(any(SurplusPost.class))).thenReturn(surplusPost);
-
         claimService.claimSurplusPost(claimRequest, receiver);
-
         // Verify timeline event was created with email as fallback
         verify(timelineService).createTimelineEvent(
                 eq(surplusPost),
@@ -1064,29 +831,23 @@ class ClaimServiceTest {
                 eq(PostStatus.AVAILABLE),
                 any(PostStatus.class),
                 eq("Claimed by receiver@test.com"),
-                eq(true)
-        );
+                eq(true));
     }
-
     @Test
     void claimSurplusPost_WithExistingOtpCode_DoesNotRegenerateCode() {
         // Given - post already has OTP code and pickup time has started
         LocalDate pastDate = LocalDate.now().minusDays(1);
         LocalTime startTime = LocalTime.of(10, 0);
         LocalTime endTime = LocalTime.of(12, 0);
-
         surplusPost.setOtpCode("EXISTING123");
         surplusPost.setPickupDate(pastDate);
-
         PickupSlotRequest pickupSlot = new PickupSlotRequest();
         pickupSlot.setPickupDate(pastDate);
         pickupSlot.setStartTime(startTime);
         pickupSlot.setEndTime(endTime);
         claimRequest.setPickupSlot(pickupSlot);
-
         when(surplusPostRepository.findById(1L)).thenReturn(Optional.of(surplusPost));
         when(claimRepository.existsBySurplusPostIdAndStatus(1L, ClaimStatus.ACTIVE)).thenReturn(false);
-
         Claim savedClaim = new Claim(surplusPost, receiver);
         savedClaim.setId(1L);
         savedClaim.setConfirmedPickupDate(pastDate);
@@ -1094,39 +855,29 @@ class ClaimServiceTest {
         savedClaim.setConfirmedPickupEndTime(endTime);
         when(claimRepository.save(any(Claim.class))).thenReturn(savedClaim);
         when(surplusPostRepository.save(any(SurplusPost.class))).thenReturn(surplusPost);
-
         claimService.claimSurplusPost(claimRequest, receiver);
-
         // Verify OTP code wasn't changed
-        verify(surplusPostRepository).save(argThat(post -> 
-                "EXISTING123".equals(post.getOtpCode()) && 
-                post.getStatus() == PostStatus.READY_FOR_PICKUP
-        ));
+        verify(surplusPostRepository).save(argThat(post -> "EXISTING123".equals(post.getOtpCode()) &&
+                post.getStatus() == PostStatus.READY_FOR_PICKUP));
     }
-
     @Test
     void claimSurplusPost_WithInvalidSlotTimes_LogsWarning() {
         // Given - slot with end time before start time (suspicious timezone issue)
         LocalDate pickupDate = LocalDate.now().plusDays(2);
-        LocalTime startTime = LocalTime.of(16, 0);  // 4 PM
-        LocalTime endTime = LocalTime.of(14, 0);    // 2 PM (before start!)
-
+        LocalTime startTime = LocalTime.of(16, 0); // 4 PM
+        LocalTime endTime = LocalTime.of(14, 0); // 2 PM (before start!)
         PickupSlot suspiciousSlot = new PickupSlot();
         suspiciousSlot.setId(200L);
         suspiciousSlot.setPickupDate(pickupDate);
         suspiciousSlot.setStartTime(startTime);
         suspiciousSlot.setEndTime(endTime);
         suspiciousSlot.setSurplusPost(surplusPost);
-
         List<PickupSlot> pickupSlots = new ArrayList<>();
         pickupSlots.add(suspiciousSlot);
         surplusPost.setPickupSlots(pickupSlots);
-
         claimRequest.setPickupSlotId(200L);
-
         when(surplusPostRepository.findById(1L)).thenReturn(Optional.of(surplusPost));
         when(claimRepository.existsBySurplusPostIdAndStatus(1L, ClaimStatus.ACTIVE)).thenReturn(false);
-
         Claim savedClaim = new Claim(surplusPost, receiver);
         savedClaim.setId(1L);
         savedClaim.setConfirmedPickupDate(pickupDate);
@@ -1134,17 +885,13 @@ class ClaimServiceTest {
         savedClaim.setConfirmedPickupEndTime(endTime);
         when(claimRepository.save(any(Claim.class))).thenReturn(savedClaim);
         when(surplusPostRepository.save(any(SurplusPost.class))).thenReturn(surplusPost);
-
         // When
         ClaimResponse response = claimService.claimSurplusPost(claimRequest, receiver);
-
         // Then - claim should still be created despite suspicious times
         assertThat(response).isNotNull();
         verify(claimRepository).save(any(Claim.class));
     }
-
     // ==================== Tests for completeClaim ====================
-
     @Test
     void completeClaim_Success() {
         // Given
@@ -1152,80 +899,60 @@ class ClaimServiceTest {
         activeClaim.setId(1L);
         activeClaim.setStatus(ClaimStatus.ACTIVE);
         surplusPost.setStatus(PostStatus.READY_FOR_PICKUP);
-
         when(claimRepository.findById(1L)).thenReturn(Optional.of(activeClaim));
         when(claimRepository.save(any(Claim.class))).thenReturn(activeClaim);
-
         // When
         claimService.completeClaim(1L);
-
         // Then
         verify(claimRepository).save(argThat(claim -> claim.getStatus() == ClaimStatus.COMPLETED));
         verify(gamificationService).awardPoints(eq(receiver.getId()), anyInt(), anyString());
     }
-
     @Test
     void completeClaim_ClaimNotFound_ThrowsException() {
         // Given
         when(claimRepository.findById(999L)).thenReturn(Optional.empty());
-
         // When & Then
         assertThatThrownBy(() -> claimService.completeClaim(999L))
                 .isInstanceOf(RuntimeException.class)
                 .hasMessageContaining("not found");
-
         verify(claimRepository, never()).save(any());
     }
-
-
     @Test
     void completeClaim_AwardsGamificationPoints() {
         // Given
         Claim activeClaim = new Claim(surplusPost, receiver);
         activeClaim.setId(1L);
         activeClaim.setStatus(ClaimStatus.ACTIVE);
-
         when(claimRepository.findById(1L)).thenReturn(Optional.of(activeClaim));
         when(claimRepository.save(any(Claim.class))).thenReturn(activeClaim);
-
         // When
         claimService.completeClaim(1L);
-
         // Then - verify gamification points awarded to receiver
         verify(gamificationService).awardPoints(eq(receiver.getId()), anyInt(), anyString());
         verify(gamificationService).checkAndUnlockAchievements(eq(receiver.getId()));
     }
-
     // ==================== Tests for Expired Claims ====================
-
     @Test
     void claimSurplusPost_WithExpiredPost_ThrowsException() {
         // Given
         surplusPost.setStatus(PostStatus.EXPIRED);
-
         when(surplusPostRepository.findById(1L)).thenReturn(Optional.of(surplusPost));
-
         // When & Then
         assertThatThrownBy(() -> claimService.claimSurplusPost(claimRequest, receiver))
                 .isInstanceOf(RuntimeException.class)
                 .hasMessageContaining("expired");
     }
-
-
     @Test
     void cancelClaim_CreatesTimelineEvent() {
         // Given
         Claim activeClaim = new Claim(surplusPost, receiver);
         activeClaim.setId(1L);
         activeClaim.setStatus(ClaimStatus.ACTIVE);
-
         when(claimRepository.findById(1L)).thenReturn(Optional.of(activeClaim));
         when(claimRepository.save(any(Claim.class))).thenReturn(activeClaim);
         when(surplusPostRepository.save(any(SurplusPost.class))).thenReturn(surplusPost);
-
         // When
         claimService.cancelClaim(1L, receiver);
-
         // Then
         verify(timelineService).createTimelineEvent(
                 eq(surplusPost),
@@ -1235,60 +962,47 @@ class ClaimServiceTest {
                 eq(PostStatus.AVAILABLE),
                 eq(PostStatus.AVAILABLE),
                 anyString(),
-                eq(true)
-        );
+                eq(true));
     }
-
     @Test
     void cancelClaim_UpdatesBusinessMetrics() {
         // Given
         Claim activeClaim = new Claim(surplusPost, receiver);
         activeClaim.setId(1L);
         activeClaim.setStatus(ClaimStatus.ACTIVE);
-
         when(claimRepository.findById(1L)).thenReturn(Optional.of(activeClaim));
         when(claimRepository.save(any(Claim.class))).thenReturn(activeClaim);
         when(surplusPostRepository.save(any(SurplusPost.class))).thenReturn(surplusPost);
-
         // When
         claimService.cancelClaim(1L, receiver);
-
         // Then
         verify(businessMetricsService).incrementClaimCancelled();
     }
-
     @Test
     void claimSurplusPost_UpdatesBusinessMetrics() {
         // Given
         when(surplusPostRepository.findById(1L)).thenReturn(Optional.of(surplusPost));
         when(claimRepository.existsBySurplusPostIdAndStatus(1L, ClaimStatus.ACTIVE)).thenReturn(false);
-
         Claim savedClaim = new Claim(surplusPost, receiver);
         savedClaim.setId(1L);
         when(claimRepository.save(any(Claim.class))).thenReturn(savedClaim);
         when(surplusPostRepository.save(any(SurplusPost.class))).thenReturn(surplusPost);
-
         // When
         claimService.claimSurplusPost(claimRequest, receiver);
-
         // Then
         verify(businessMetricsService).incrementClaimCreated();
         verify(businessMetricsService).incrementSurplusPostClaimed();
     }
-
     @Test
     void completeClaim_UpdatesClaimMetrics() {
         // Given
         Claim activeClaim = new Claim(surplusPost, receiver);
         activeClaim.setId(1L);
         activeClaim.setStatus(ClaimStatus.ACTIVE);
-
         when(claimRepository.findById(1L)).thenReturn(Optional.of(activeClaim));
         when(claimRepository.save(any(Claim.class))).thenReturn(activeClaim);
-
         // When
         claimService.completeClaim(1L);
-
         // Then
         verify(businessMetricsService).incrementClaimCompleted();
     }
